--- a/src/components/ProductCard/index.css
+++ b/src/components/ProductCard/index.css
@@ -1,8 +1,5 @@
-/* TODO: Add your CSS here */
-
 .product-item {
-  display: flex;
-  flex-direction: column;
+  list-style-type: none;
   margin-bottom: 48px;
   width: 350px;
   flex-grow: 0;
@@ -10,14 +7,16 @@
   margin-right: 20px;
 }
 
-.links {
-  text-decoration: none;
-}
-
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .product-item {
     width: 300px;
   }
+}
+
+.link-item {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
 }
 
 .thumbnail {
@@ -54,7 +53,7 @@
   font-family: 'Roboto';
   font-size: 18px;
   font-weight: 700;
-  margin: 0;
+  margin: 0px;
 }
 
 .rating-container {
