--- a/src/components/SimilarProductItem/index.css
+++ b/src/components/SimilarProductItem/index.css
@@ -1,54 +1,72 @@
-.similar-image {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.price-rating-tag {
+.similar-product-item {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.s-img {
-  width: 17px;
-  margin-left: 4px;
-}
-
-.rating-tag {
-  background-color: #3b82f6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 60px;
-  height: 28px;
-  color: #ffffff;
-  border-radius: 5px;
-  font-family: Roboto;
-}
-
-.similar-head {
-  font-size: 18px;
-  color: #12022f;
-  font-family: Roboto;
-}
-
-.similar-brand {
-  font-size: 18px;
-  color: #616e7c;
-}
-
-.similar-cost {
-  font-weight: 600;
-  font-size: 20px;
-  color: #12022f;
+  flex-direction: column;
+  list-style-type: none;
 }
 
 @media screen and (min-width: 768px) {
-  .similar-item {
-    width: 30%;
+  .similar-product-item {
+    width: 200px;
+    margin-right: 64px;
   }
+}
 
-  .similar-head {
-    font-size: 30px;
-  }
+.similar-product-img {
+  width: 200px;
+  border-radius: 8px;
+}
+
+.similar-product-title {
+  color: #171f46;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+
+.similar-products-brand {
+  color: #594d6d;
+  font-family: 'Roboto';
+  font-size: 16px;
+  margin-top: 6px;
+}
+
+.similar-product-price-rating-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+}
+
+.similar-product-price {
+  color: #171f46;
+  font-family: 'Roboto';
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.similar-product-rating-container {
+  display: flex;
+  align-items: center;
+  background-color: #3b82f6;
+  border-radius: 6px;
+  padding-left: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+}
+
+.similar-product-rating {
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+  margin-right: 4px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.similar-product-star {
+  height: 14px;
+  width: 14px;
 }
